--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "paths": {
       "~/*": ["./app/*"]
     },
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
