--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@remix-run/node": "^1.17.1",
     "@remix-run/react": "^1.17.1",
     "@remix-run/serve": "^1.17.1",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.4.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
