--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "better-sqlite3": "^8.4.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.17.1",
