--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
+    "setup": "prisma generate && dotenv -e .env.development -- prisma migrate dev",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.1",
     "@remix-run/css-bundle": "^1.17.1",
     "@remix-run/node": "^1.17.1",
     "@remix-run/react": "^1.17.1",
@@ -15,6 +17,7 @@
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.4.0",
+    "dotenv-cli": "^7.2.1",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -25,6 +28,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
+    "prisma": "^4.16.1",
     "typescript": "^5.0.4"
   },
   "engines": {
