--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "papaye",
   "private": true,
   "sideEffects": false,
   "scripts": {
@@ -17,6 +18,7 @@
     "@remix-run/react": "^1.17.1",
     "@remix-run/serve": "^1.17.1",
     "@types/bcrypt": "^5.0.0",
+    "@vanilla-extract/css": "^1.11.1",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.4.0",
     "dotenv-cli": "^7.2.1",
@@ -33,6 +35,7 @@
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
     "prisma": "^4.16.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
   },
   "engines": {
