--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
-    "remix-auth-form": "^1.3.0"
+    "remix-auth-form": "^1.3.0",
+    "slate": "^0.94.1",
+    "slate-react": "^0.97.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.17.1",
