--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "better-sqlite3": "^8.4.0",
     "dotenv-cli": "^7.2.1",
     "isbot": "^3.6.8",
+    "katex": "^0.16.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
     "remix-auth-form": "^1.3.0",
     "slate": "^0.94.1",
-    "slate-react": "^0.97.1"
+    "slate-react": "^0.97.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.17.1",
