--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@vanilla-extract/css": "^1.11.1",
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.4.0",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "dotenv-cli": "^7.2.1",
     "isbot": "^3.6.8",
     "katex": "^0.16.8",
@@ -30,6 +32,8 @@
     "remix-auth-form": "^1.3.0",
     "slate": "^0.94.1",
     "slate-react": "^0.97.1",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
