--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "remix-auth": "^3.4.0",
     "remix-auth-form": "^1.3.0",
     "slate": "^0.94.1",
+    "slate-history": "^0.93.0",
     "slate-react": "^0.97.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
